# Chip-8-Emulator

./: CMakeLists.txt  main.c  vertexShader.glsl
include/: buzzer.h  chip8.h  screen.h
roms/: DVN8.ch8  eaty.ch8
src/: buzzer.c  chip8.c  opcodes.c  screen.c  shader.c
